# OpenAI-responses-api-hub

./: .gitattributes  .gitignore  Introduction-to-OpenAI-Responses-API-mervin-praison.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  harborlight_renewal_desk.py
archive/legacy_notebooks/: 01_basic_chatbot.ipynb  02_tools_and_reasoning.ipynb  README.md
docs/: CLAUDE_RELEASE_REVIEW.md  CODEX_HANDOFF.md  FABLE_RECOMMENDATIONS.md  IMPLEMENTATION_PLAN.md  MIGRATION_NOTES.md  REPO_REVIEW.md  UPGRADE_REVIEW.md  VALIDATION.md
docs/history/: UPGRADE_REVIEW.md
examples/: responses_to_mcp_bridge.py
notebooks/: 01_basic_chatbot.ipynb  01_first_harborlight_response.ipynb  02_structured_renewal_review.ipynb  02_tools_and_reasoning.ipynb  03_function_tools.ipynb  03_structured_outputs.ipynb  04_conversation_state.ipynb  04_multi_step_tools.ipynb  05_web_search_and_evidence.ipynb  test_openai_connection.ipynb
src/harborlight_responses/: __init__.py  client.py  config.py  fixtures.py  mcp_adapter.py  responses.py  schemas.py  services.py  structured.py  tool_loop.py  tools.py  transparency.py
src/harborlight_responses/data/: SOURCE.json  fictional_policies.csv
tests/: test_app.py  test_config.py  test_mcp_adapter.py  test_models.py  test_notebooks.py  test_openai_client.py  test_repository_hygiene.py  test_responses.py  test_responses_api.py  test_schemas.py  test_services.py  test_structured.py  test_tools.py
utils/: __init__.py  config.py  models.py  openai_client.py  responses_api.py
