[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harborlight-responses"
version = "1.0.0"
description = "Responses API 101 with fictional Harborlight insurance renewals"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Nick Ferguson / IT Pro Direct"}]
keywords = ["openai", "responses-api", "structured-outputs", "function-calling", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
]
dependencies = [
    "openai>=2.45,<3",
    "pydantic>=2.11,<3",
    "python-dotenv>=1,<2",
]

[project.urls]
Repository = "https://github.com/itprodirect/OpenAI-responses-api-hub"
Issues = "https://github.com/itprodirect/OpenAI-responses-api-hub/issues"

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6,<8",
    "jupyter>=1,<2",
    "nbconvert>=7,<8",
    "pandas>=2,<4",
]
app = ["gradio>=6,<7"]
mcp = ["mcp>=1.28,<2"]
dev = [
    "gradio>=6,<7",
    "ipykernel>=6,<8",
    "mcp>=1.28,<2",
    "nbconvert>=7,<8",
    "pandas>=2,<4",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harborlight_responses = ["data/*.csv", "data/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
